Fix maven workflow

--- a/chip8-app/pom.xml
+++ b/chip8-app/pom.xml
@@ -15,6 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+        <maven.shade.version>3.4.1</maven.shade.version>
     </properties>
 
     <dependencies>
@@ -79,6 +80,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>${maven.shade.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -97,6 +99,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
