--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,11 +14,13 @@ on:
   pull_request:
     branches: [ "master" ]
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
