--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.tomassirio</groupId>
     <artifactId>Chip8-KT</artifactId>
     <description>A Kotlin-based Chip8 emulator</description>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <distributionManagement>
