--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.tomassirio</groupId>
-    <artifactId>Chip8-KT</artifactId>
+    <artifactId>Chip8-Kt</artifactId>
     <description>A Kotlin-based Chip8 emulator</description>
     <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -14,7 +14,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/tomassirio/Chip8-KT</url>
+            <url>https://maven.pkg.github.com/tomassirio/Chip8-Kt</url>
         </repository>
     </distributionManagement>
 
