--- a/chip8-app/pom.xml
+++ b/chip8-app/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.tomassirio</groupId>
-        <artifactId>Chip8-KT</artifactId>
+        <artifactId>Chip8-Kt</artifactId>
         <version>1.0.0</version>
     </parent>
 
