--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,21 +33,34 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
+          name: chip8-app-jar
           path: chip8-app/target/*.jar
+
   publish:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          server-id: github
-          server-username: GITHUB_ACTOR
-          server-password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: chip8-app-jar
+          path: chip8-app/target
+
+      - name: Set up Maven settings
+        run: |
+          mkdir -p $HOME/.m2
+          cp .github/maven-settings.xml $HOME/.m2/settings.xml
+
       - name: Publish package
         run: mvn --batch-mode deploy
-
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ github.actor }}
