--- a/chip8-app/pom.xml
+++ b/chip8-app/pom.xml
@@ -6,10 +6,12 @@
     <parent>
         <groupId>io.github.tomassirio</groupId>
         <artifactId>chip8-kt</artifactId>
-        <version>1.0.1</version>
+        <version>${revision}${changelist}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>chip8-app</artifactId>
+    <version>1.0.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
