--- a/chip8-app/pom.xml
+++ b/chip8-app/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.tomassirio</groupId>
         <artifactId>Chip8-Kt</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>chip8-app</artifactId>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>io.github.tomassirio</groupId>
             <artifactId>ui</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
