--- a/system/pom.xml
+++ b/system/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.tomassirio</groupId>
         <artifactId>Chip8-Kt</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <packaging>jar</packaging>
 
