--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
-  GITHUB_DEPLOY_TOKEN: ${{ secrets._DEPLOY_TOKEN }}
-
 permissions:
   contents: write
   packages: write
@@ -37,14 +34,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: chip8-app/target/*.jar
-
   publish:
-    needs: build
     runs-on: ubuntu-latest
-#    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -52,10 +45,8 @@ jobs:
           distribution: 'temurin'
           server-id: github
           server-username: GITHUB_ACTOR
-          server-password: ${{ secrets._DEPLOY_TOKEN }}
-
+          server-password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish package
         run: mvn --batch-mode deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets._DEPLOY_TOKEN }}
+
 
