--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.tomassirio</groupId>
-    <artifactId>Chip8-Kt</artifactId>
+    <artifactId>chip8-kt</artifactId>
     <description>A Kotlin-based Chip8 emulator</description>
     <version>1.0.1</version>
     <packaging>pom</packaging>
