--- a/chip8-app/pom.xml
+++ b/chip8-app/pom.xml
@@ -5,11 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.tomassirio</groupId>
-        <artifactId>Chip8-KT</artifactId>
-        <version>1.0.0</version>
+        <artifactId>chip8-kt</artifactId>
+        <version>${revision}${changelist}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>chip8-app</artifactId>
+    <version>1.0.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +24,7 @@
         <dependency>
             <groupId>io.github.tomassirio</groupId>
             <artifactId>ui</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
