--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -5,18 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.tomassirio</groupId>
-        <artifactId>Chip8-KT</artifactId>
-        <version>1.0.0</version>
+        <artifactId>chip8-kt</artifactId>
+        <version>${revision}${changelist}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>jar</packaging>
 
     <artifactId>controller</artifactId>
+    <version>1.0.1</version>
 
     <dependencies>
         <dependency>
             <groupId>io.github.tomassirio</groupId>
             <artifactId>system</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
 
         <!--Test-->
