--- a/system/pom.xml
+++ b/system/pom.xml
@@ -5,12 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.tomassirio</groupId>
-        <artifactId>Chip8-KT</artifactId>
-        <version>1.0.0</version>
+        <artifactId>chip8-kt</artifactId>
+        <version>${revision}${changelist}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>jar</packaging>
 
     <artifactId>system</artifactId>
+    <version>1.0.1</version>
 
     <dependencies>
         <dependency>
